adding register ,login and logout commpnnet

--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -1,6 +1,55 @@
-<div class="container d-flex justify-content-center mt-4">
-    <div>
-    <h1 class="text-danger">3ayaaaaaaaaaaaaaaaaaaaaaat</h1>
-    <h1 class="text-danger">W seib El project</h1>
-</div>
-</div>
+<body>
+    <h1 id="welcome">Welcome To <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reading World</h1>
+    <!-- book cards -->
+    <div class="card m-5" style="width: 18rem;float: left;">
+        <div class="card-body">
+            <img id="icon-book" src="../../assets/book-square.png" alt="icon-book">
+            <h5 class="card-title mt-0">Popular Books</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            <ul style="list-style: none;">
+                <li><a href="#" class="card-link">Soft skills for developers</a></li>
+                <li><a href="#" class="card-link">The power of now</a></li>
+                <li><a href="#" class="card-link">Change your thinking</a></li>
+                <li><a href="#" class="card-link">Atomic habits</a></li>
+                <li><a href="#" class="card-link">The power of now</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- authors cards -->
+    <div class="card m-5" style="width: 18rem;float: left;">
+        <div class="card-body">
+            <img id="author-icon" src="../../assets/icon-author.png" alt="author-book">
+            <h5 class="card-title mt-0">Popular Authors</h5>
+            <ul style="list-style: none;">
+                <li><a href="#" class="card-link">Taha Hussein</a></li>
+                <li><a href="#" class="card-link">Kareem Elshazly</a></li>
+                <li><a href="#" class="card-link">Mostafa Mahmoud</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- categories cards -->
+    <div class="card m-5" style="width: 18rem;float: left;">
+        <div class="card-body">
+
+            <img id="categories-icon" src="../../assets/categories-icon.png" alt="categories-book">
+            <h5 class="card-title ">Popular categories</h5>
+
+            <ul style="list-style: none;">
+                <li><a href="#" class="card-link">Sychology</a></li>
+                <li><a href="#" class="card-link">science</a></li>
+                <li><a href="#" class="card-link">History</a></li>
+            </ul>
+        </div>
+    </div>
+    <pre>
+
+    </pre>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="clear: both;">
+        <button class="btn bg-gg btn-dark" type="button" (click)="onLogInClk()">log in</button>
+        <button class="btn bg-gg btn-dark" type="button" (click)="onSignUpClk()">sign up</button>
+    </div>
+
+
+</body>
