--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,66 +1,123 @@
-<div>
-<nav
-  class="navbar navbar-expand-lg navbar-light backColor d-flex justify-content-between"
->
-  <div class="container d-flex justify-content-between align-items-center">
-    <a class="navbar-brand" [routerLink]="''"
-      ><img src="../../assets/msg704385414-285121.jpg" alt="" class="logo"
-    /></a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active text-light" aria-current="page" [routerLink]="''"
-            >Home</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" [routerLink]='"/categories"'>Categories</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" [routerLink]="'/books'">Books</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" [routerLink]='"/authors"'>Authors</a>
-        </li>
-      </ul>
-    </div>
-    <div class="container w-100 text-end text-center">
-      <div class="row">
-        <div class="col">
-          <div class="w-100 d-flex justify-content-end align-items-center">
-            <img
-              class="logo mx-3 "
-              src="../../assets//msg704385414-278576.jpg"
-            />
-            <a href="" class="text-light text-decoration-none">Mohammed Dghar</a>
-            <a href="#"
-              ><i
-                class="fontSize mx-3 text-light fa-solid fa-right-from-bracket"
-              ></i
-            ></a>
+<!-- <div>
+  <nav class="navbar navbar-expand-lg navbar-light backColor d-flex justify-content-between">
+    <div class="continer-fluid d-flex justify-content-between align-items-center">
+      <a   class="navbar-brand" [routerLink]="''"><img src="../../assets/msg704385414-285121.jpg" alt="" class="logo" /></a>
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+        <ul class="navbar-nav me-auto mb-2  ">
+
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link  text-light"  routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link text-light" routerLink='"/categories"'>Categories</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link text-light" [routerLink]="'/books'">Books</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link text-light" [routerLink]='"/authors"'>Authors</a>
+          </li>
+        
+        </ul>
+      </div>
+      <div class="continer-fluid w-100 text-end text-center">
+        <div class="row">
+          <div class="col">
+            <div class="w-100 d-flex justify-content-end align-items-center">
+              <img *ngIf="islogin" class="logo mx-3 " src="../../assets//msg704385414-278576.jpg" />
+              <a *ngIf="islogin"  href="" class="text-light text-decoration-none ">Mohammed Dghar</a>
+             // <a *ngIf="islogin"  href="#"><i class="fontSize mx-3 text-light fa-solid fa-right-from-bracket"></i></a> 
+            </div>
           </div>
         </div>
       </div>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <i *ngIf="!islogin" class="fa-regular fa-user text-light "></i>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!islogin"  class="nav-link text-light" [routerLink]='"/login"'>Login</a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!islogin" class="nav-link text-light" [routerLink]='"/signup"'>Signup</a>
+        </li>
+
+        <li class="nav-item">
+          <a *ngIf="islogin" class="nav-link text-light" routerLink="logout" (click)="isLogOut()">Logout </a>
+        </li>
+      </ul>
+    </div>
+  </nav>-->
+
+<nav class="navbar navbar-expand-lg backColor">
+  <div class="w-100 d-flex justify-content-between">
+    <div class=" d-flex justify-content-between">
+      <a class="navbar-brand" [routerLink]="''"><img src="../../assets/msg704385414-285121.jpg" alt="" class="logo" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+
+          <li class="nav-item">
+            <a  class="nav-link  text-light" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link  text-light" routerLink="/categories">Categories</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
+          </li>
+          <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class=" d-flex justify-content align-items-center">
+      <div class="row">
+        <div class="col">
+          <div class="w-100 d-flex justify-content align-items-center">
+            <img *ngIf="islogin" class="logo mx-3 " src="../../assets//msg704385414-278576.jpg" />
+            <a *ngIf="islogin" href="" class="text-light text-decoration-none ">Mohammed Dghar</a>
+          </div>
+        </div>
+      </div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <i *ngIf="!islogin" class="fa-regular fa-user text-light "></i>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!islogin" class="nav-link  text-light" routerLink="login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="!islogin" class="nav-link  text-light" routerLink="signup">sign up</a>
+        </li>
+        <li class="nav-item">
+          <a *ngIf="islogin" routerLink="logout" (click)="isLogOut()"><i
+              class="fontSize mx-3 text-light fa-solid fa-right-from-bracket"></i></a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
-<div class="container d-flex justify-content-center mt-3">
+
+<div class="continer-fluid d-flex justify-content-center mt-3">
   <!-- <div class="input-group mb-3 "> -->
-    <input type="text" class="w-50 searchBar" placeholder="Search" >
-    <div class="input-group-append">
-      <button class="btn searchBtn" type="button" id="button-addon2"><i class="fa-solid fa-magnifying-glass"></i></button>
+  <input type="text" class="w-50 searchBar" placeholder="Search">
+  <div class="input-group-append">
+    <button class="btn searchBtn" type="button" id="button-addon2"><i class="fa-solid fa-magnifying-glass"></i></button>
     <!-- </div> -->
   </div>
-</div>
 </div>
