--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -1,55 +1,97 @@
 <body>
-    <h1 id="welcome">Welcome To <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reading World</h1>
-    <!-- book cards -->
-    <div class="card m-5" style="width: 18rem;float: left;">
-        <div class="card-body">
-            <img id="icon-book" src="../../assets/book-square.png" alt="icon-book">
-            <h5 class="card-title mt-0">Popular Books</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
-            <ul style="list-style: none;">
-                <li><a href="#" class="card-link">Soft skills for developers</a></li>
-                <li><a href="#" class="card-link">The power of now</a></li>
-                <li><a href="#" class="card-link">Change your thinking</a></li>
-                <li><a href="#" class="card-link">Atomic habits</a></li>
-                <li><a href="#" class="card-link">The power of now</a></li>
-            </ul>
-        </div>
-    </div>
-    <!-- authors cards -->
-    <div class="card m-5" style="width: 18rem;float: left;">
-        <div class="card-body">
-            <img id="author-icon" src="../../assets/icon-author.png" alt="author-book">
-            <h5 class="card-title mt-0">Popular Authors</h5>
-            <ul style="list-style: none;">
-                <li><a href="#" class="card-link">Taha Hussein</a></li>
-                <li><a href="#" class="card-link">Kareem Elshazly</a></li>
-                <li><a href="#" class="card-link">Mostafa Mahmoud</a></li>
-            </ul>
-        </div>
-    </div>
 
-    <!-- categories cards -->
-    <div class="card m-5" style="width: 18rem;float: left;">
-        <div class="card-body">
-
-            <img id="categories-icon" src="../../assets/categories-icon.png" alt="categories-book">
-            <h5 class="card-title ">Popular categories</h5>
-
-            <ul style="list-style: none;">
-                <li><a href="#" class="card-link">Sychology</a></li>
-                <li><a href="#" class="card-link">science</a></li>
-                <li><a href="#" class="card-link">History</a></li>
-            </ul>
+    <a href="#authBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:10%;position: absolute;background-color: #f9be75;" src="../../assets/icon-author.png"></a>
+    <a href="#catBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:30%;position: absolute;background-color: #f9be75;" src="../../assets/categories-icon.png"></a>
+    <a href="#bookBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:50%;position: absolute;background-color: #f9be75;" src="../../assets/book-square.png"></a>
+    <section class="header">
+      <div class="container">
+        
+        <div class="middle">
+          <h1 class="text-white fw-bold display-3">Welcome To <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+            class="span1">Reading World </span></h1>
+          </div>
+          
         </div>
-    </div>
+        
+        <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="#fff" fill-opacity="1"
+          d="M0,64L80,80C160,96,320,128,480,144C640,160,800,160,960,149.3C1120,139,1280,117,1360,106.7L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
+        </path>
+      </svg>
+      
+    </section>
     <pre>
-
+      
+      
+      
+      
     </pre>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="clear: both;">
-        <button class="btn bg-gg btn-dark" type="button" (click)="onLogInClk()">log in</button>
-        <button class="btn bg-gg btn-dark" type="button" (click)="onSignUpClk()">sign up</button>
-    </div>
-
-
-</body>
+    <br>
+    <!-- ------------------------Blocks------- -->
+    <div class="container  d-flex justify-content-center ms-5">
+      <div class="row">
+        <!-- fist block -->
+        <div id="authBlk" class="col-md-12">
+          <div class="desc">
+            <h2 class="text-center mb-4 ">popular authors</h2>
+            <!-- ** ** -->
+            <!-- Gallery -->
+            <div class="container">
+              <div class="row mb-3">
+                <div *ngFor="let author of authors" class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                  <div class="card">
+                    <img [routerLink]="'/authors/'+author._id"
+                    [src]="author.photo"
+                  class="w-100 shadow-1-strong rounded mb-4 card-img-top"  alt="{{author.firstName}}" />
+              <!-- <div class="card-img-overlay text-light">
+              </div> -->
+              <p class="fw-bold text-center border border-light rounded ">{{author.firstName}} {{author.lastName}}</p>
+                </div>
+              </div>
+            </div>
+            </div>
+            <!-- Gallery -->
+          </div>
+        </div>
+        <!-- second block -->
+        <div id="catBlk" class="col-md-12">
+            <div class="desc">
+            <h2 class="text-center mb-4">popular categories</h2>
+            <div class="row mb-3">
+              <div *ngFor="let category of categories" class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+                <div class="cat-bord ms-3">
+                  <a [routerLink]="'/categories/'+category._id" class="text-dark text-decoration-none"><h3>{{category.name}}</h3></a>
+                </div>
+                
+                </div>
+            </div>
+          </div>
+        </div>
+        <!-- third block -->
+        <div id="bookBlk" class="col-md-12" >
+            <div class="desc">
+            <!-- <img class="imgs-blocks" src="../../assets/book-square.png"> -->
+            <h2 class="text-center mb-4">popular books</h2>
+            <div *ngFor="let book of books" class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+              <img [routerLink]="'/books/'+book._id"
+                [src]="book.photo"
+                class="shadow-1-strong rounded mb-4" alt="{{book.Name}}" style="width:100px;float: left;margin-left: 5px;"/>
+            
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  </body>
