--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -60,7 +60,7 @@
             <div class="row mb-3">
               <div *ngFor="let category of categories" class="col-lg-4 col-md-12 mb-4 mb-lg-0">
                 <div class="cat-bord ms-3">
-                  <a [routerLink]="'/categories/'+category._id" class="text-dark text-decoration-none"><h3>{{category.name}}</h3></a>
+                  <a [routerLink]="'/category/'+category._id" class="text-dark text-decoration-none"><h3>{{category.name}}</h3></a>
                 </div>
                 
                 </div>
