--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -113,11 +113,11 @@
   </div>
 </nav>
 
-<div class="continer-fluid d-flex justify-content-center mt-3">
-  <!-- <div class="input-group mb-3 "> -->
+<!-- <div class="continer-fluid d-flex justify-content-center mt-3">
+  
   <input type="text" class="w-50 searchBar" placeholder="Search">
   <div class="input-group-append">
     <button class="btn searchBtn" type="button" id="button-addon2"><i class="fa-solid fa-magnifying-glass"></i></button>
-    <!-- </div> -->
+   
   </div>
-</div>
+</div> -->
