--- a/Frontend/src/app/authors/authors.component.html
+++ b/Frontend/src/app/authors/authors.component.html
@@ -1,13 +1,23 @@
+<div class="container d-flex justify-content-center mt-3">
+    <input type="text" class="w-50 searchBar" placeholder="Search For Author with first or last name without spaces" #search  (keyup)="filterAuthors(search)">
+    <div class="input-group-append">
+      <button class="btn searchBtn" type="button" id="button-addon2"   (click)="filterAuthors(search)" (keyup.enter)="filterAuthors(search)"><i class="fa-solid fa-magnifying-glass"></i></button>
+  </div>
+</div>
+
 <div class="container mt-4 ">
     <div class="row">
-        <div   *ngFor="let author of authors" class="card mx-4 mt-3" style="width: 18rem;">
-            <img src="../../assets/msg704385414-278576.jpg" class="card-img-top" alt="...">
+        <div   *ngFor="let author of searchedAuthors" class="card mx-4 mt-3" style="width: 18rem;">
+            <img src="{{author.photo}}" class="card-img-top h-75" alt="...">
             <div class="card-body">
               <a [routerLink]="'/authors/'+author._id" class="text-decoration-none text-dark"><h5 class="card-title">{{author.firstName}} {{author.lastName}}</h5></a>
             </div>
           </div>
 <div *ngIf="authors.length==0" class="d-flex justify-content-center">
     <p class="text-danger fontSize">There is no Authors To show!!</p>
+</div>
+<div *ngIf="searchedAuthors.length==0" class="d-flex justify-content-center">
+    <p class="text-danger fontSize">There is no Authors Matched</p>
 </div>
     </div>
 </div>
