--- a/Frontend/src/app/books/books.component.html
+++ b/Frontend/src/app/books/books.component.html
@@ -1,7 +1,14 @@
+<div class="container d-flex justify-content-center mt-3">
+    <input type="text" class="w-50 searchBar" placeholder="Search For Book" #search  (keyup)="filterBooks(search)">
+    <div class="input-group-append">
+      <button class="btn searchBtn" type="button" id="button-addon2"   (click)="filterBooks(search)" (keyup.enter)="filterBooks(search)"><i class="fa-solid fa-magnifying-glass"></i></button>
+  </div>
+</div>
+
 <div class="container mt-4 ">
     <div class="row">
-        <div   *ngFor="let book of books" class="card mx-4 mt-3" style="width: 18rem;">
-            <img src="../../assets/msg704385414-278576.jpg" class="card-img-top" alt="...">
+        <div   *ngFor="let book of searchedBooks" class="card mx-4 mt-3" style="width: 18rem;">
+            <img src="{{book.photo}}" class="card-img-top h-75" alt="...">
             <div class="card-body">
               <a [routerLink]="'/books/'+book._id" class="text-decoration-none text-dark"><h5 class="card-title">{{book.Name}}</h5></a>
               <a [routerLink]="'/authors/'+book.AuthorId._id" class="text-decoration-none text-dark"><p>By: {{book.AuthorId.firstName}} {{book.AuthorId.lastName}}</p></a>
@@ -9,6 +16,9 @@
           </div>
 <div *ngIf="books.length==0" class="d-flex justify-content-center">
     <p class="text-danger fontSize">There is no Books To show!!</p>
+</div>
+<div *ngIf="searchedBooks.length==0" class="d-flex justify-content-center">
+    <p class="text-danger fontSize">There is no Books Matched</p>
 </div>
     </div>
 </div>
