--- a/Frontend/src/app/categories/categories.component.css
+++ b/Frontend/src/app/categories/categories.component.css
@@ -4,3 +4,18 @@
 .fontSize{
     font-size: 25px;
 }
+
+.searchBar{
+    border: 4px solid #979490;
+    border-radius: 30px;
+    font-size: 25px;
+}
+.searchBtn{
+    border: 3px solid #979490;
+    border-radius: 20px;
+    font-size: 25px;
+}
+.searchBtn:hover{
+    background-color: #979490;
+    color: white;
+}
