--- a/Frontend/src/app/specific-author/specific-author.component.html
+++ b/Frontend/src/app/specific-author/specific-author.component.html
@@ -1,30 +1,31 @@
 <div class="container-fluid d-flex mt-5">
-<div class="card" style="width: 18rem;">
-    <img src="../../assets/msg704385414-285121.jpg" class="card-img-top" alt="...">
-  </div>
-  <div class="ms-4 mt-4">
-   <h5 class="text-decoration-none text-dark">{{author[0].firstName}} {{author[0].lastName}}</h5>
-  <p *ngIf="author.DateOfBirth">Born in: {{author[0].DateOfBirth}}</p>
-</div>
-</div>
-
-<div class="title mt-5">
-    <p class="ms-3">Author's Books</p>
-</div>
-<div class="container contains">
-    <div class="d-flex bookCard mt-5 " *ngFor="let book of books">
-        <div class="card" style="width: 18rem;">
-            <img src="../../assets/msg704385414-285121.jpg" class="card-img-top" alt="...">
-        </div>
-        <div class="ms-4 mt-5">
-            <a [routerLink]="'/books/'+book._id" class="text-decoration-none"><h5 class="text-decoration-none text-dark mt-5">{{book.Name}}</h5></a>
-            <p *ngIf="!rating"  (click)="changeStar()"> <i class="fa-solid fa-star mt-3 ms-1 rated"></i> <i class="fa-solid fa-star mt-3 ms-1 rated"></i> <i class="fa-solid fa-star mt-3 ms-1 rated"></i> <i class="fa-solid fa-star mt-3 ms-1 rated"></i> <i class="fa-solid fa-star mt-3 ms-1 rated"></i></p>
-            <p  *ngIf="rating" (click)="changeStar()"><i class="fa-regular fa-star mt-3 ms-1 rate"></i><i class="fa-regular fa-star mt-3 ms-1 rate"></i><i class="fa-regular fa-star mt-3 ms-1 rate"></i><i class="fa-regular fa-star mt-3 ms-1 rate"></i><i class="fa-regular fa-star mt-3 ms-1 rate"></i></p>
-        </div>
+    <div class="card" style="width: 18rem;">
+        <img src="{{author[0].photo}}" class="card-img-top" alt="...">
+      </div>
+      <div class="ms-4 mt-4">
+       <h5 class="text-decoration-none text-dark">{{author[0].firstName}} {{author[0].lastName}}</h5>
+      <p *ngIf="author[0].DateOfBirth">Born in: {{author[0].DateOfBirth}}</p>
     </div>
-        <div *ngIf="books.length==0" class="d-flex justify-content-center">
-            <p class="text-danger fontSize">There is no Books for this Author To show!!</p>
-        </div>
-        
     </div>
-
+    
+    <div class="title mt-5">
+        <p class="ms-3">Author's Books</p>
+    </div>
+    <div class="container contains">
+        <div class="d-flex bookCard mt-5 mb-3" *ngFor="let book of books">
+            <div class="card" style="width: 18rem;">
+                <img src="{{book.photo}}" class="card-img-top" alt="...">
+            </div>
+            <div class="ms-4 mt-5">
+                <a [routerLink]="'/books/'+book._id"  class="text-decoration-none"><h5 class="text-decoration-none text-dark mt-5">{{book.Name}}</h5></a>
+                <a [routerLink]="'/category/'+book.CategoryId._id"  class="text-decoration-none"><h5 class="text-decoration-none text-dark mt-2">{{book.CategoryId.name}}</h5></a>
+                <p> <i *ngFor="let x of book.star" class="fa-solid fa-star mt-3 ms-1 rated"></i> <i *ngFor="let x of book.unstar" class="fa-regular fa-star mt-3 ms-1 rate"></i></p>
+            </div>
+        </div>
+            <div *ngIf="books.length==0" class="d-flex justify-content-center">
+                <p class="text-danger fontSize">There is no Books for this Author To show!!</p>
+            </div>
+            
+    </div>
+    
+    
