--- a/Frontend/src/app/specific-book/specific-book.component.html
+++ b/Frontend/src/app/specific-book/specific-book.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid d-flex mt-5">
     <div class="card" style="width: 18rem;">
-        <img src="../../assets/images.jpeg" class="card-img-top h-100" alt="...">
+        <img src="{{book[0].photo}}" class="card-img-top h-100" alt="...">
       </div>
       <div class="ms-4 mt-4">
        <h5 class="text-decoration-none text-dark">{{book[0].Name}}</h5>
