--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -90,7 +90,7 @@
         <div class="col">
           <div class="w-100 d-flex justify-content align-items-center">
             <img *ngIf="islogin" class="logo mx-3 " src="../../assets//msg704385414-278576.jpg" />
-            <a *ngIf="islogin" href="" class="text-light text-decoration-none ">Mohammed Dghar</a>
+            <a *ngIf="islogin" routerLink="all" class="text-light text-decoration-none ">Mohammed Dghar</a>
           </div>
         </div>
       </div>
