--- a/Frontend/src/app/all-books/all-books.component.css
+++ b/Frontend/src/app/all-books/all-books.component.css
@@ -1,9 +1,3 @@
-nav{
-
-    background-color: #774f38;
-    
-    
-    }
     
     a{
     
@@ -56,19 +50,16 @@ nav{
      padding-bottom: 5px;
      
     }
-    
-     table, th, td {
-      border:1px solid black;
-      
-    
-    } 
+
+    table,th,td{
+      border:  1px solid black;
+    }
     .center{
-    
-    
+  
       margin-left: auto;
       margin-right: auto;
       text-align: center;
-      margin-top: -590px; 
+      /* margin-top: -590px;  */
       width: 76%;
       height: 100%;
       border:3px solid black;
@@ -133,3 +124,6 @@ nav{
       margin-top: -250%;
       margin-left: 4%;
     } 
+    .pos{
+      margin-top: 500px;
+    }
