ading delete of category for admin

--- a/Frontend/src/app/admin-category/admin-category.component.html
+++ b/Frontend/src/app/admin-category/admin-category.component.html
@@ -15,7 +15,7 @@
                     <button class="btn btn-sm btn-warning mr-4">
                         <i class="fa fa-edit"></i>Edit
                     </button>
-                    <button class="btn btn-sm btn-danger ml-2">
+                    <button class="btn btn-sm btn-danger ml-2" (click)="ondelete([catge._id])">
                         <i class="fa fa-remove "></i>Delete
                     </button>
                 </td>
