--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -15,9 +15,11 @@
           <li class="nav-item">
             <a  class="nav-link  text-light" routerLink="/home">Home</a>
           </li>
-          <li class="nav-item">
-            <a *ngIf="islogin" class="nav-link  text-light" routerLink="/categories">Categories</a>
+          <li   class="nav-item">
+            <a *ngIf="islogin && !isadmin" class="nav-link  text-light" routerLink="/categories">Categories</a>
+            <a *ngIf="islogin && isadmin" class="nav-link  text-light" routerLink="/admin-category">Categories</a>
           </li>
+            
           <li class="nav-item">
             <a *ngIf="islogin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
           </li>
