--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -22,8 +22,10 @@
             
           <li class="nav-item">
             <a *ngIf="islogin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
+            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
           </li>
           <li class="nav-item">
+            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
             <a *ngIf="islogin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
           </li>
         </ul>
