adding books and authors for dashboard

--- a/Frontend/src/app/admin-books/admin-books.component.html
+++ b/Frontend/src/app/admin-books/admin-books.component.html
@@ -1,1 +1,97 @@
-<p>admin-books works!</p>
+<div class="container">
+    <div class="text-right mt-3 "><i class="fa-solid fa-circle-plus fa-2xl mt-4 " role="button" data-bs-toggle="modal"
+            data-bs-target="#exampleModal1"></i></div>
+
+    <table class="table table-bordered mt-4 ">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Photo</th>
+                <th>Name</th>
+                <th>CategoryId</th>
+                <th>AuthorId</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor='let book of admin_books'>
+                <td class="text">{{book.id}}</td>
+                <td><img [src]="book.photo"class="image"/></td>
+                <td>{{book.Name}}</td>
+                <td>{{book.CategoryId}}</td>
+                <td>{{book.AuthorId}}</td>
+
+                <td>
+                    <button class="btn  btn-warning mr-4" (click)="onEdit(book)" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal2">
+                        <!-- <i class="fa fa-edit"></i> -->Edit
+                    </button>
+                    <button class="btn  btn-danger ml-2" (click)="ondelete([book._id])">
+                        <!-- <i class="fa fa-remove "></i> -->Delete
+                    </button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel1">Add new Book</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="card m-5" style="padding: 20px;">
+                <form #registerForm="ngForm" (ngSubmit)="register(registerForm)">
+                    <div class="form-group">
+                        <label for="name">Book Name </label>
+                        <input type="text" (ngModel)="name" name="name" id="name" class="form-control"
+                            placeholder="Book Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Add" class="btn btn-primary mr-4 ">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel2">Edit Book</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body " style="padding: 20px;">
+
+                <form #updateForm="ngForm" (ngSubmit)='updateBook()'>
+
+                    <div class="form-group">
+                        <label for="name">Book Name</label>
+                        <input type="text" #name [(ngModel)]="bookToUpdate.Name" class="form-control" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">photo</label>
+                        <input type="text" #name [(ngModel)]="bookToUpdate.Name" class="form-control" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">category id</label>
+                        <input type="text" #name [(ngModel)]="bookToUpdate.Name" class="form-control" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Author id</label>
+                        <input type="text" #name [(ngModel)]="bookToUpdate.Name" class="form-control" name="name" id="name">
+                    </div>
+                    <div class="d-flex ">
+                        <div><input type="submit" value="Update" class="btn btn-primary mr-4 "></div>
+                        <div><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
