--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg backColor">
   <div class="w-100 d-flex justify-content-between">
     <div class=" d-flex justify-content-between">
@@ -13,20 +12,20 @@
         <ul class="navbar-nav mr-auto">
 
           <li class="nav-item">
-            <a  class="nav-link  text-light" routerLink="/home">Home</a>
+            <a class="nav-link  text-light" routerLink="/home">Home</a>
           </li>
-          <li   class="nav-item">
+          <li class="nav-item">
             <a *ngIf="islogin && !isadmin" class="nav-link  text-light" routerLink="/categories">Categories</a>
             <a *ngIf="islogin && isadmin" class="nav-link  text-light" routerLink="/admin-category">Categories</a>
           </li>
-            
+
           <li class="nav-item">
-            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
-            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
+            <a *ngIf="islogin && !isadmin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
+            <a *ngIf="islogin && isadmin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
           </li>
           <li class="nav-item">
-            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
-            <a *ngIf="islogin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
+            <a *ngIf="islogin && !isadmin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
+            <a *ngIf="islogin && isadmin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
           </li>
         </ul>
       </div>
@@ -65,6 +64,5 @@
   <input type="text" class="w-50 searchBar" placeholder="Search">
   <div class="input-group-append">
     <button class="btn searchBtn" type="button" id="button-addon2"><i class="fa-solid fa-magnifying-glass"></i></button>
-   
   </div>
 </div> -->
