--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <body>
-
-    <a href="#authBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:10%;position: absolute;background-color: #f9be75;" src="../../assets/icon-author.png"></a>
-    <a href="#catBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:30%;position: absolute;background-color: #f9be75;" src="../../assets/categories-icon.png"></a>
-    <a href="#bookBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:50%;position: absolute;background-color: #f9be75;" src="../../assets/book-square.png"></a>
+<div style="margin-top: 30px;">
+    <a href="#authBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:22%;position: absolute;background-color: #f9be75;" src="../../assets/icon-author.png"></a>
+    <a href="#catBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:40%;position: absolute;background-color: #f9be75;" src="../../assets/categories-icon.png"></a>
+    <a href="#bookBlk"><img class="imgs-blocks text-center border rounded-3" style="left:0%;top:59%;position: absolute;background-color: #f9be75;" src="../../assets/book-square.png"></a>
     <section class="header">
       <div class="container">
         
@@ -20,12 +20,7 @@
       </svg>
       
     </section>
-    <pre>
-      
-      
-      
-      
-    </pre>
+    
     <br>
     <!-- ------------------------Blocks------- -->
     <div class="container  d-flex justify-content-center ms-5">
@@ -91,7 +86,7 @@
   
   
   
-  
+</div>
   
   
   </body>
