--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -21,11 +21,11 @@
 
           <li class="nav-item">
             <a *ngIf="islogin && !isadmin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
-            <a *ngIf="islogin && isadmin" class="nav-link  text-light" [routerLink]="'/books'">Books</a>
+            <a *ngIf="islogin && isadmin" class="nav-link  text-light" [routerLink]="'/admin-books'">Books</a>
           </li>
           <li class="nav-item">
             <a *ngIf="islogin && !isadmin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
-            <a *ngIf="islogin && isadmin" class="nav-link  text-light" [routerLink]='"/authors"'>Authors</a>
+            <a *ngIf="islogin && isadmin" class="nav-link  text-light" [routerLink]='"/admin-authors"'>Authors</a>
           </li>
         </ul>
       </div>
